--- a/JiaoBaoYun-hb/html/cloud/storage_main.html
+++ b/JiaoBaoYun-hb/html/cloud/storage_main.html
@@ -68,6 +68,10 @@
 				text-align: center;
 				height: 45px;
 			}
+			.mui-media-object{
+				height: 42px;
+				width: 42px;
+			}
 		</style>
 	</head>
 
