--- a/JiaoBaoYun-hb/html/homework/workdetail-tea-sub.html
+++ b/JiaoBaoYun-hb/html/homework/workdetail-tea-sub.html
@@ -26,8 +26,8 @@
 
 	<body>
 		<nav id="alertBar" class="mui-bar mui-bar-tab" style="visibility:hidden;">
-			<div align="center">
-				<button id="alertAll" type="button" class="mui-btn mui-btn-blue " style="border-radius: 10px;width: 200px; ;">一键提醒</button>
+			<div align="center" >
+				<button id="alertAll" type="button" class="mui-btn mui-btn-blue " style="border-radius: 10px;width: 200px;">一键提醒</button>
 			</div>
 		</nav>
 		<div class="mui-content mui-scroll-wrapper">
@@ -42,7 +42,7 @@
 					<div class="mui-media-body">
 						<font id="homeWorkContent"></font> 
 					</div>
-					<div align="center">
+					<div align="center" style="visibility: hidden;">
 						<button id="checkDetail" type="button" class="mui-btn mui-btn-blue " style="border-radius: 10px;width: 100px;margin-top:15px ;">查看详情</button>
 					</div>
 
