--- a/JiaoBaoYun-hb/html/homework/homework-commented.html
+++ b/JiaoBaoYun-hb/html/homework/homework-commented.html
@@ -1,4 +1,4 @@
-<!--作业详情已评论界面-->
+<!--学生作业结果界面-->
 <!doctype html>
 <html>
 
@@ -11,9 +11,7 @@
 
 	<body>
 		<script src="../../js/mui.min.js"></script>
-		<script type="text/javascript">
-			mui.init()
-		</script>
+		
 	</body>
 
 </html>
