--- a/JiaoBaoYun-hb/html/homework/homework-publish.html
+++ b/JiaoBaoYun-hb/html/homework/homework-publish.html
@@ -40,7 +40,7 @@
 				<div class="receive-container">
 					<a id="select-classes" class="mui-pull-right select-classes">&gt;</a>
 					<label>接收人</label>
-					<div id="receive-teachers" class="receive-classes">
+					<div id="classes" class="receive-classes">
 					</div>
 					
 				</div>
