--- a/JiaoBaoYun-hb/html/homework/publish-answer.html
+++ b/JiaoBaoYun-hb/html/homework/publish-answer.html
@@ -23,6 +23,7 @@
 		<header class="mui-bar mui-bar-nav">
 			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
 			<h1 id="title" class="mui-title">上传答案||作业</h1>
+			<a id="checkResult" class="mui-icon iconfont icon-jixiaofenshuchaxun mui-pull-right display-none"></a>
 			<a id="getAnswer" class="mui-icon iconfont icon-xiangji mui-pull-right"></a>
 		</header>
 		<div class="mui-content">
@@ -31,24 +32,13 @@
 				<div class="mui-input-row display-none teachers-container">
 					<label>接收人:</label>
 					<select id="receive-teachers">
-						<option>生物</option>
-						<option>其他</option>
 					</select>
 				</div>
 				<!--科目选项-->
 				<div class="mui-input-row display-none subjects-container">
 					<label>科目:</label>
 					<select id="publish-subjects">
-						<option>语文</option>
-						<option>数学</option>
-						<option>英语</option>
-						<option>历史</option>
-						<option>政治</option>
-						<option>地理</option>
-						<option>物理</option>
-						<option>化学</option>
-						<option>生物</option>
-						<option>其他</option>
+					
 					</select>
 				</div>
 				
