--- a/JiaoBaoYun-hb/html/homework/doHomework-stu.html
+++ b/JiaoBaoYun-hb/html/homework/doHomework-stu.html
@@ -44,7 +44,7 @@
 			mui.plusReady(function(){
 				window.addEventListener('homeworkInfo',function(e){
 					homeworkModel=e.detail.data;
-					console.log('学生做作业界面从上级界面获取的做作业数据：'+JSON.stringify(homeworkInfo));
+					console.log('学生做作业界面从上级界面获取的做作业数据：'+JSON.stringify(homeworkModel));
 				})
 			});
 			
