--- a/JiaoBaoYun-hb/html/homework/homework-commented.html
+++ b/JiaoBaoYun-hb/html/homework/homework-commented.html
@@ -11,6 +11,7 @@
 
 	<body>
 		<script src="../../js/mui.min.js"></script>
+		<script src="../../js/homework/homework-commented.js"></script>
 		
 	</body>
 
