--- a/JiaoBaoYun-hb/html/homework/homework-tea-sub.html
+++ b/JiaoBaoYun-hb/html/homework/homework-tea-sub.html
@@ -10,7 +10,7 @@
 		<title></title>
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
 		<link href="../../css/mui.min.css" rel="stylesheet" />
-		<link href="../../css/utils/common.css" rel="stylesheet" />
+		<!--<link href="../../css/utils/common.css" rel="stylesheet" />-->
 		<link href="../../css/iconfont/iconfont.css" rel="stylesheet" />
 		<link href="../../css/homework/subjects-icon.css" rel="stylesheet" />
 		<link href="../../css/homework/homework.css" rel="stylesheet" />
