--- a/JiaoBaoYun-hb/html/homework/homework-tea.html
+++ b/JiaoBaoYun-hb/html/homework/homework-tea.html
@@ -25,7 +25,7 @@
 		    	<button id="btn-homework" type="button" class="mui-btn mui-btn-green mui-btn-outlined">学生作业</button>
 		    </div>
 		    <!--更多按钮-->
-		   	<a id="more" class="mui-icon  mui-icon-bars mui-pull-right" href="#popover"></a>
+		   	<a id="more" class="mui-icon  mui-icon-bars mui-pull-right display-none" href="#popover"></a>
 		   	<!--相机按钮-->
 		    <a id="icon-camero" class="mui-icon iconfont icon-xiangji mui-pull-right"></a>
 		</header>
