--- a/JiaoBaoYun-hb/html/cloud/cloud_home.html
+++ b/JiaoBaoYun-hb/html/cloud/cloud_home.html
@@ -637,10 +637,11 @@
 					var div = document.createElement("div");
 					div.setAttribute('data-fid', data.fid);
 					div.className = 'mui-col-sm-4 mui-col-xs-4 cloud-text-align-center';
-					var html1 = '';
-
+					var html1 = ''; //图标
+					var html2 = ''; //名字
 					if(data.ftype == '.file') { //文件夹
 						html1 = '<img class="cloud-bottom-imge" src="../../image/cloud/A_folder.png" />';
+						html2 = '<p class="mui-ellipsis">' + data.fname + '</p>';
 					} else { //文件
 						var type = cloud.classify(data.ftype);
 						var pathList = data.fpath.split('/');
@@ -652,8 +653,8 @@
 						} else { //七牛能生成缩略图的图片或视频
 							html1 = '<img class="cloud-bottom-imge" src="' + path + '" />';
 						}
+						html2 = '<p class="mui-ellipsis">' + data.fname + data.ftype + '</p>';
 					}
-					var html2 = '<p class="mui-ellipsis">' + data.fname + '</p>';
 					div.innerHTML = html1 + html2;
 					table.appendChild(div);
 				}
