--- a/JiaoBaoYun-hb/html/homework/homework-commented.html
+++ b/JiaoBaoYun-hb/html/homework/homework-commented.html
@@ -12,12 +12,63 @@
 
 	<body>
 		<header class="mui-bar mui-bar-nav">
-		    <a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
-		    <h1 class="mui-title">评论</h1>
+			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
+			<h1 class="mui-title">评论</h1>
 		</header>
 		<script src="../../js/mui.min.js"></script>
 		<script src="../../js/homework/homework-commented.js"></script>
-		
+
+		<script type="text/javascript">
+			mui.init()
+				
+			});
+			
+			mui.plusReady(function(){
+				
+			});
+			
+			//2.	获取教师发布作业详情，不包括学生提交的答案；学生
+			function requestGetHomeworkStu(comData) {
+				//所需参数
+				var comData = {
+					studentId: '', //学生Id
+					classId: '', //班级群Id；
+					homeworkId: '' //作业id；
+				};
+				//2.	获取教师发布作业详情，不包括学生提交的答案；
+				postDataPro_GetHomeworkStu(comData, wd, function(data) {
+					wd.close();
+					console.log('2.postDataPro_GetHomeworkStu:RspCode:' + data.RspCode + ',RspData:' + JSON.stringify(data.RspData) + ',RspTxt:' + data.RspTxt);
+					if(data.RspCode == 0) {
+
+					} else {
+
+					}
+				});
+			}
+
+			//3.	获取作业结果；学生
+			function requestGetHomeworkResultStu(comData) {
+				//所需参数
+				var comData = {
+					studentId: '', //学生Id
+					classId: '', //班级群Id；
+					homeworkId: '' //作业id；
+				};
+				//3.	获取作业结果；
+				postDataPro_GetHomeworkResult(comData, wd, function(data) {
+					wd.close();
+					console.log('3.postDataPro_GetHomeworkResult:RspCode:' + data.RspCode + ',RspData:' + JSON.stringify(data.RspData) + ',RspTxt:' + data.RspTxt);
+					if(data.RspCode == 0) {
+
+					} else {
+
+					}
+				});
+			}
+			
+		</script>
+
 	</body>
 
 </html>
