1、学生查看作业评语界面 2、老师作业详情 提醒后 按钮不可编辑 3、点击老师作业详情跳转到评论界面

--- a/JiaoBaoYun-hb/html/homework/workdetailTea-temSub.html
+++ b/JiaoBaoYun-hb/html/homework/workdetailTea-temSub.html
@@ -75,6 +75,9 @@
 					})
 
 				});
+				mui('.mui-table-view').on('tap', function() {
+    events.jumpPage(this,'homework-comment.html')
+});
 				var resetData = function() {
 						homeworkNodes.list.innerHTML = '';
 					}
