--- a/JiaoBaoYun-hb/html/homework/homework-commented.html
+++ b/JiaoBaoYun-hb/html/homework/homework-commented.html
@@ -8,16 +8,42 @@
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
 		<link href="../../css/mui.min.css" rel="stylesheet" />
 		<link href="../../css/utils/common.css" rel="stylesheet" />
+		<script src="../../js/mui.min.js"></script>
+		<script src="../../js/storageKeyName.js" type="text/javascript" charset="utf-8"></script>
+		<script src="../../js/publicHomeworkProtocol.js" type="text/javascript" charset="utf-8"></script>
+		<script src="../../js/publicProtocol.js" type="text/javascript" charset="utf-8"></script>
+		<script src="../../js/utils/events.js" type="text/javascript"></script>
 	</head>
 
 	<body>
 		<header class="mui-bar mui-bar-nav">
 			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
-			<h1 class="mui-title">评论</h1>
+			<h1 class="mui-title">评语</h1>
 		</header>
-		<script src="../../js/mui.min.js"></script>
-		<script src="../../js/homework/homework-commented.js"></script>
-
+		
+		<div class="mui-content mui-scroll-wrapper">
+			<div class="mui-scroll">
+				<ul class="mui-table-view">
+					<li class="mui-table-view-cell mui-media ">
+						<img id="img" class="mui-media-object mui-pull-left" src="../../image/homework/math.png" />
+						<div class="mui-media-body">
+							<h6 id="homeworkTitle">数学作业</h6>
+						<p id="publishDate" class='mui-ellipsis'>发布时间：</p>
+					</div>
+					<div class="mui-media-body">
+						<font id="homeWorkContent">1+1=3</font> 
+					</div>
+				</li>
+				<li class="mui-table-view-divider">作业评语</li>
+									<li class="mui-table-view-cell  ">
+					<div class="mui-media-body" >
+						<font id="commentContent">你真是个天才！</font> 
+					</div>
+				</li>
+			</ul>
+			</div>
+			</div>
+			<script src="../../js/homework/homework-commented.js"></script>
 	</body>
 
 </html>
