作业身份选项卡

--- a/JiaoBaoYun-hb/html/homework/homework-publish.html
+++ b/JiaoBaoYun-hb/html/homework/homework-publish.html
@@ -38,14 +38,14 @@
 					</select>
 				</div>
 				<div class="receive-container">
-					<a id="select-classes" class="mui-pull-right select-classes">&gt;</a>
+					<a id="select-classes" class="mui-pull-right select-classes mui-icon mui-icon-arrowright"></a>
 					<label>接收人</label>
 					<div id="classes" class="receive-classes">
 					</div>
 					
 				</div>
-				<div>
-					<textarea id="publish-content" type="text" style="min-height: 10rem;" placeholder="输入你要布置的作业内容"></textarea>
+				<div class="input-erea">
+					<textarea id="publish-content" type="text"  placeholder="输入你要布置的作业内容"></textarea>
 					<div class="publish-extras">
 						<a id="getRecord" class="mui-icon mui-icon-mic"></a>
 						<a id="getImg" class="mui-icon iconfont icon-xiangji"></a>
