--- a/JiaoBaoYun-hb/html/homework/workdetail-tea-sub.html
+++ b/JiaoBaoYun-hb/html/homework/workdetail-tea-sub.html
@@ -398,7 +398,7 @@
 				});
 
 mui('.mui-table-view').on('tap', '.isCommented', function() {
-    events.fireToPageNone('homework-comment.html', 'workDetail', homeworkDetailModel);
+    events.fireToPageNone('homework-comment.html', 'workInfo', homeworkDetailModel);
 				plus.webview.getWebviewById("homework-comment.html").show();
 });
 
