--- a/JiaoBaoYun-hb/html/homework/doHomework-stu.html
+++ b/JiaoBaoYun-hb/html/homework/doHomework-stu.html
@@ -25,7 +25,7 @@
 	<body>
 		<header class="mui-bar mui-bar-nav">
 			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
-			<h1 id="title" class="mui-title"></h1>
+			<h1 id="title" class="mui-title">作业详情</h1>
 			<a id="publis" class="mui-pull-right ">完成</a>
 		</header>
 		<div class="mui-content">
