--- a/JiaoBaoYun-hb/html/homework/workdetailTea-temSub.html
+++ b/JiaoBaoYun-hb/html/homework/workdetailTea-temSub.html
@@ -63,7 +63,7 @@
 						var comData = {
 							teacherId: personalUTID, //教师Id
 							classId: homeworkModel.classId, //班级群Id；
-							date: '2016-12-14' //查看的日期，不带时间；
+							date: date//查看的日期，不带时间；
 						};
 						requestAnswerList(comData);
 						refeshUI();
@@ -151,15 +151,15 @@
 						//							'<div class="mui-media-body mui-pull-right" style="margin-top: -25px;">' +
 						//							'<p id="isCommented" style="font-size: 13px;">'++'<span class="mui-icon mui-icon-forward"></span></p>' +
 						//							'</div>'
-						li.innerHTML =
-							'<img id="img" class="mui-media-object mui-pull-left dynamic-personal-image " src="../../image/homework/math.png" />' +
-							'<div class="mui-media-body" style="margin-top: 8px;">' +
-							'<p id="name" style="font-size: 16px;">安琪<font style="font-size: 12px;">&nbsp&nbsp&nbsp&nbsp结果:1.&#10003, 2.&#10005</font></p>' +
-							'</div>' +
-							'<div class="mui-media-body mui-pull-right" style="margin-top: -25px;">' +
-							'<p id="isCommented" style="font-size: 13px;">未评<span class="mui-icon mui-icon-forward"></span></p>' +
-							'</div>'
-						homeworkNodes.list.appendChild(li);
+//						li.innerHTML =
+//							'<img id="img" class="mui-media-object mui-pull-left dynamic-personal-image " src="../../image/homework/math.png" />' +
+//							'<div class="mui-media-body" style="margin-top: 8px;">' +
+//							'<p id="name" style="font-size: 16px;">安琪<font style="font-size: 12px;">&nbsp&nbsp&nbsp&nbsp结果:1.&#10003, 2.&#10005</font></p>' +
+//							'</div>' +
+//							'<div class="mui-media-body mui-pull-right" style="margin-top: -25px;">' +
+//							'<p id="isCommented" style="font-size: 13px;">未评<span class="mui-icon mui-icon-forward"></span></p>' +
+//							'</div>'
+//						homeworkNodes.list.appendChild(li);
 					}
 
 				}
