--- a/JiaoBaoYun-hb/html/homework/homework-commented.html
+++ b/JiaoBaoYun-hb/html/homework/homework-commented.html
@@ -19,6 +19,7 @@
 		<header class="mui-bar mui-bar-nav">
 			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
 			<h1 class="mui-title">评语</h1>
+			<a id="modifyHomework" class="mui-pull-right">修改</a>
 		</header>
 		
 		<div class="mui-content mui-scroll-wrapper">
