--- a/JiaoBaoYun-hb/html/homework/workdetailTea-temSub.html
+++ b/JiaoBaoYun-hb/html/homework/workdetailTea-temSub.html
@@ -62,7 +62,7 @@
 						//所需参数
 						var comData = {
 							teacherId: personalUTID, //教师Id
-							classId: homeworkModel.classId, //班级群Id；
+							classId: homeworkModel.gid, //班级群Id；
 							date: date//查看的日期，不带时间；
 						};
 						requestAnswerList(comData);
