未提交临时作业向下级页面传值

--- a/JiaoBaoYun-hb/html/homework/homework-comment.html
+++ b/JiaoBaoYun-hb/html/homework/homework-comment.html
@@ -25,7 +25,7 @@
 		    <div class="comment-container">
 	    		<h4>作业评语</h4>
 	    		<textarea class='comment-area' rows="5" placeholder="请输入评语"></textarea>
-	    		<button id="submit" type="submit" class="mui-btn mui-btn-green btn-submit">提交评论</button>
+	    		<button id="btn-subComment" type="submit" class="mui-btn mui-btn-green btn-submit">提交评论</button>
 		    </div>
 		    
 		</div>
