老师临时作业详情列表 给老师评语界面传值

--- a/JiaoBaoYun-hb/html/homework/workdetail-tea-sub.html
+++ b/JiaoBaoYun-hb/html/homework/workdetail-tea-sub.html
@@ -341,6 +341,7 @@
 				var headImg = updateHeadImg(uploadArray[i].uimg,2)
 									var li = document.createElement('li');
 									li.workInfo = uploadArray[i];
+									mui.extend(li.workInfo,homeworkDetailModel)
 									li.className = 'mui-table-view-cell mui-media isCommented'
 				li.innerHTML = '<img  class="mui-media-object mui-pull-left " src="'+headImg +'" />'+
 										'<div class="mui-media-body">'+
