--- a/JiaoBaoYun-hb/html/homework/workdetailTea-temSub.html
+++ b/JiaoBaoYun-hb/html/homework/workdetailTea-temSub.html
@@ -73,6 +73,7 @@
 				});
 				var resetData = function() {
 						homeworkNodes.list.innerHTML = '';
+						answerListArray = [];
 						personalUTID = window.myStorage.getItem(window.storageKeyName.PERSONALINFO).utid;
 					}
 					//个人id
@@ -80,7 +81,6 @@
 				//答案列表数组
 				var answerListArray = [];
 				//群id
-				var classID;
 
 				//4.	根据教师Id和班级Id获取学生某个日期上传的答案列表；
 				function requestAnswerList(comData) {
@@ -95,13 +95,14 @@
 							answerListArray = data.RspData;
 							//13.通过群ID获取群的正常用户
 							//所需参数
-							var comData = {
+							var comData1 = {
 								top: '-1', //选择条数
-								vvl: classID, //群ID，查询的值
+								vvl: homeworkModel.gid, //群ID，查询的值
 								vvl1: '-1' //群员类型，0家长,1管理员,2老师,3学生,-1取全部
 							};
+							console.log('comData1:'+JSON.stringify(comData1));
 							//13.通过群ID获取群的正常用户
-							postDataPro_PostGusers(comData, wd, function(data1) {
+							postDataPro_PostGusers(comData1, wd, function(data1) {
 								wd.close();
 								console.log('13.postDataPro_PostGusers:RspCode:' + data1.RspCode + ',RspData:' + JSON.stringify(data1.RspData) + ',RspTxt:' + data1.RspTxt);
 								if(data1.RspCode == 0) {
@@ -141,25 +142,26 @@
 					});
 				}
 				var refeshUI = function() {
-					for(var i = 0; i < 10; i++) {
+					for(var i = 0; i <answerListArray.length; i++) {
 						var li = document.createElement('li');
 						li.className = 'mui-table-view-cell mui-media';
-						//						li.innerHTML = '<img id="img" class="mui-media-object mui-pull-left dynamic-personal-image" src="'++'" />' +
-						//							'<div class="mui-media-body" style="margin-top: 8px;">' +
-						//							'<p id="name" style="font-size: 16px;">'++'<font style="font-size: 12px;">&nbsp&nbsp&nbsp&nbsp'+结果:1、正确 2、错误+'</font></p>' +
-						//							'</div>' +
-						//							'<div class="mui-media-body mui-pull-right" style="margin-top: -25px;">' +
-						//							'<p id="isCommented" style="font-size: 13px;">'++'<span class="mui-icon mui-icon-forward"></span></p>' +
-						//							'</div>'
-//						li.innerHTML =
-//							'<img id="img" class="mui-media-object mui-pull-left dynamic-personal-image " src="../../image/homework/math.png" />' +
-//							'<div class="mui-media-body" style="margin-top: 8px;">' +
-//							'<p id="name" style="font-size: 16px;">安琪<font style="font-size: 12px;">&nbsp&nbsp&nbsp&nbsp结果:1.&#10003, 2.&#10005</font></p>' +
-//							'</div>' +
-//							'<div class="mui-media-body mui-pull-right" style="margin-top: -25px;">' +
-//							'<p id="isCommented" style="font-size: 13px;">未评<span class="mui-icon mui-icon-forward"></span></p>' +
-//							'</div>'
-//						homeworkNodes.list.appendChild(li);
+						li.homeworkInfo = answerListArray[i];
+						mui.extend( this.homeworkInfo, homeworkModel);
+						li.homeworkInfo.workType = 0;
+if(answerListArray[i].IsCommented==true){
+	answerListArray[i].IsCommented = '已评'
+}else{
+	answerListArray[i].IsCommented = '未评'
+}
+						li.innerHTML =
+							'<img id="img" class="mui-media-object mui-pull-left dynamic-personal-image " src="'+updateHeadImg(answerListArray[i].uimg)+'" />' +
+							'<div class="mui-media-body" style="margin-top: 8px;">' +
+							'<p id="name" style="font-size: 16px;">'+answerListArray[i].ugnick+'<font style="font-size: 12px;">&nbsp&nbsp&nbsp&nbsp'+answerListArray[i].QuestionResultStr+'</font></p>' +
+							'</div>' +
+							'<div class="mui-media-body mui-pull-right" style="margin-top: -25px;">' +
+							'<p id="isCommented" style="font-size: 13px;">'+answerListArray[i].IsCommented+'<span class="mui-icon mui-icon-forward"></span></p>' +
+							'</div>'
+						homeworkNodes.list.appendChild(li);
 					}
 
 				}
